# performance-modelling-tools

./: .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  requirements.txt
benchmark/: README.md  ekondis-mixbench.sh
benchmark/mulan/2022-05-18-05-58/: mixbench-log.txt
docs/: index.md
docs/getting_started/: install.md
examples/ERT/mulan/: Mulan-MI100  run_ert.sh
examples/EXESS/mulan-mi100/: README.md  events-profile.sh  hotspot-trace-profile.sh  install.sh  irm-profile.sh  rocprof-basic.txt  rocprof-derived.tmpl  rocprof-derived.txt  rocprof-wrapper-trace.sh  rocprof-wrapper.sh
examples/EXESS/mulan-omp-cpu/: README.md  install.sh  run.sh
examples/S3D/setonix/: install.sh  install_miniapps.sh  rocprof-events.txt  rocprof-wrapper.sh  run_profile.mini_apps.sh  run_profile.s3d_STXgpu.sh  s3d_np1.in
examples/TCLB/setonix/: README.md  install.sh  install_rocm5-4-3.sh  rocprof_input.txt  run_profile.sh  short_0.xml  test3d.sh  test3d.xml
examples/TCLB/topaz/: frac_scale.sh  install.sh  install_frac_scale_test.sh  memcheck.sh  setup_tests.sh  test3d.sh  test3d.xml
examples/VISCOUS/mulan-mi100/: install-kokkos-tools-mulan.sh  install-lammps-mulan-fftdouble-cpu.sh  install-lammps-mulan-fftdouble.sh  install-lammps-mulan-fftsingle-cpu.sh  install-lammps-mulan-fftsingle.sh  job_mulan_arm_1gpu.sh  job_mulan_rocprof_kktools_1gpu.sh
examples/VISCOUS/topaz-v100/: install-kokkos-tools-topaz.sh  (+10 more)
examples/atomicAdd_demo/: Makefile  README.md  mulan.env.sh  sum.cpp  sum.cu
getting_started/: index.html
getting_started/install/: index.html
search/: search_index.json
spack/mulan/: README.md  compilers.yaml  spack.yaml
tests/: README.md
tests/multigpu/: Makefile  README.md
tests/profile_util/: CMakeLists.txt  Makefile  README.md  build_hip.sh
tests/profile_util/cmake/: PUCMakeUtils.cmake
tests/profile_util/include/: profile_util.h
tests/profile_util/src/: CMakeLists.txt  mem_util.cpp  profile_util.cpp  thread_affinity_util.cpp  time_util.cpp
tests/warmup/: Makefile  README.md
(+56 files in other folders)
